# deapi-python-sdk

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: api-reference.md
examples/: async_batch.py  basic_image.py  error_handling.py  transcription.py  tts_and_audio.py  video_generation.py  webhook_server.py
src/deapi/: __init__.py  _client.py  _config.py  _constants.py  _exceptions.py  _files.py  _polling.py  _types.py  webhook.py
src/deapi/resources/v1/: __init__.py  audio.py  embeddings.py  images.py  models.py  ocr.py  prompts.py  transcription.py  video.py
src/deapi/types/: __init__.py  common.py
src/deapi/types/v1/: __init__.py  audio.py  embeddings.py  images.py  ocr.py  prompts.py  transcription.py  video.py
tests/: conftest.py  test_audio.py  test_client.py  test_embeddings.py  test_exceptions.py  test_images.py  test_integration.py  test_ocr.py  test_polling.py  test_prompts.py  test_transcription.py  test_video.py  test_webhook.py
