[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deapi-python-sdk"
version = "0.1.0"
description = "Official Python SDK for DeAPI — distributed AI inference platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "DeAPI Team" },
]
keywords = ["deapi", "ai", "inference", "sdk", "stable-diffusion", "whisper", "tts"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.21",
    "ruff>=0.1",
    "mypy>=1.5",
]

[project.urls]
Homepage = "https://deapi.ai"
Documentation = "https://docs.deapi.ai/sdk/python"
Repository = "https://github.com/deapi-ai/deapi-python-sdk"

[tool.hatch.build.targets.wheel]
packages = ["src/deapi"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.9"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that run against the production API (require DEAPI_API_KEY)",
]
